<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xjy.smartcommunity.activity.MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:gravity="center_horizontal">
            <Button
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/weininfuwu"
                android:onClick="tiJianBtnOnClick" />

            <Button
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/xiaoquwuye"
                android:onClick="dangJianBtnOnClick" />
        </TableRow>
        <TableRow android:gravity="center_horizontal">
            <TextView
                android:layout_width="@dimen/main_btn_width"
                android:gravity="center_horizontal"
                android:text="@string/yu_yue_ti_jian"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:layout_width="@dimen/main_btn_width"
                android:gravity="center_horizontal"
                android:text="@string/title_activity_dang_jian"
                android:layout_marginTop="5dp"/>
        </TableRow>
        <TableRow android:gravity="center_horizontal">
            <Button
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/wenjuandiaocha"
                android:onClick="wuYeBtnOnClick"/>
        </TableRow>
        <TableRow android:gravity="center_horizontal">
            <TextView
                android:layout_width="@dimen/main_btn_width"
                android:gravity="center_horizontal"
                android:text="@string/wu_ye_guan_jia"
                android:layout_marginTop="5dp"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:background="@drawable/menu_bg_red"
            android:onClick="logoutBtnOnClick"/>
    </RelativeLayout>
</LinearLayout>
